--- a/VotesResults/src/votesResults.fxml
+++ b/VotesResults/src/votesResults.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.chart.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
@@ -11,30 +12,33 @@
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <TextField id="federalYearBox" fx:id="federalYearBox" layoutX="122.0" layoutY="15.0" onAction="#actionEventHandler" prefHeight="30.0" prefWidth="52.0" promptText="Year" />
                   <Slider id="federalYearSlider" fx:id="federalYearSlider" layoutX="183.0" layoutY="22.0" onDragDetected="#changeEventHandler" prefHeight="18.0" prefWidth="94.0" />
-                  <StackedBarChart id="federalBarChart" layoutX="15.0" layoutY="62.0" prefHeight="285.0" prefWidth="488.0">
+                  <StackedBarChart id="federalBarChart" fx:id="federalBarChart" layoutX="15.0" layoutY="62.0" prefHeight="285.0" prefWidth="488.0">
                     <xAxis>
-                      <CategoryAxis side="BOTTOM" />
+                      <CategoryAxis fx:id="federalBarChartXAxis" side="BOTTOM" />
                     </xAxis>
                     <yAxis>
-                      <NumberAxis side="LEFT" />
+                      <NumberAxis fx:id="federalBarChartYAxis" side="LEFT" />
                     </yAxis>
                   </StackedBarChart>
                   <Label id="federalError" layoutX="480.0" layoutY="19.0" prefHeight="23.0" prefWidth="110.0" textFill="RED" />
                   <ComboBox id="federalOffice" fx:id="federalOffice" layoutX="14.0" layoutY="15.0" onAction="#changeEventHandler" prefHeight="31.0" prefWidth="98.0" />
-                  <PieChart id="federalPieChart" layoutX="148.0" layoutY="66.0" prefHeight="278.0" prefWidth="306.0" />
-                  <LineChart id="federalLineChart" layoutX="15.0" layoutY="62.0" prefHeight="285.0" prefWidth="488.0">
+                  <PieChart id="federalPieChart" fx:id="federalPieChart" layoutX="148.0" layoutY="66.0" prefHeight="278.0" prefWidth="306.0" />
+                  <LineChart id="federalLineChart" fx:id="federalLineChart" layoutX="15.0" layoutY="62.0" prefHeight="285.0" prefWidth="488.0">
                     <xAxis>
-                      <CategoryAxis side="BOTTOM" />
+                      <CategoryAxis fx:id="federalLineChartXAxis" side="BOTTOM" />
                     </xAxis>
                     <yAxis>
-                      <NumberAxis side="LEFT" />
+                      <NumberAxis fx:id="federalLineChartYAxis" side="LEFT" />
                     </yAxis>
                   </LineChart>
                   <RadioButton id="federalBarButton" fx:id="federalBarButton" layoutX="512.0" layoutY="120.0" mnemonicParsing="false" onAction="#actionEventHandler" text="Bar" />
                   <RadioButton id="federalLineButton" fx:id="federalLineButton" layoutX="512.0" layoutY="147.0" mnemonicParsing="false" onAction="#actionEventHandler" text="Line" />
                   <RadioButton id="federalPieButton" fx:id="federalPieButton" layoutX="512.0" layoutY="174.0" mnemonicParsing="false" onAction="#actionEventHandler" text="Pie" />
+                  <Text fx:id="federalYearBox" layoutX="122.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Year" textAlignment="CENTER" wrappingWidth="52.21875">
+                     <font>
+                        <Font size="14.0" />
+                     </font></Text>
                </children></AnchorPane>
       </content>
     </Tab>
@@ -43,30 +47,34 @@
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
                   <Slider id="stateYearSlider" fx:id="stateYearSlider" layoutX="284.0" layoutY="22.0" onDragDetected="#changeEventHandler" prefHeight="18.0" prefWidth="94.0" />
-                  <TextField id="stateYearBox" fx:id="stateYearBox" layoutX="225.0" layoutY="15.0" onAction="#actionEventHandler" prefHeight="20.0" prefWidth="53.0" promptText="Year" />
-                  <StackedBarChart id="stateBarChart" layoutX="15.0" layoutY="62.0" prefHeight="285.0" prefWidth="488.0">
+                  <StackedBarChart id="stateBarChart" fx:id="stateBarChart" layoutX="15.0" layoutY="62.0" prefHeight="285.0" prefWidth="488.0">
                     <xAxis>
-                      <CategoryAxis side="BOTTOM" />
+                      <CategoryAxis fx:id="stateBarChartXAxis" side="BOTTOM" />
                     </xAxis>
                     <yAxis>
-                      <NumberAxis side="LEFT" />
+                      <NumberAxis fx:id="stateBarChartYAxis" side="LEFT" />
                     </yAxis>
                   </StackedBarChart>
                   <Label id="stateError" layoutX="480.0" layoutY="19.0" prefHeight="23.0" prefWidth="110.0" textFill="RED" />
                   <ComboBox id="stateChoice" fx:id="stateChoice" layoutX="15.0" layoutY="15.0" onAction="#changeEventHandler" prefHeight="31.0" prefWidth="98.0" />
                   <ComboBox id="stateRep" fx:id="stateOffice" layoutX="120.0" layoutY="15.0" onAction="#changeEventHandler" prefHeight="31.0" prefWidth="98.0" />
-                  <LineChart id="stateLineChart" layoutX="15.0" layoutY="62.0" prefHeight="285.0" prefWidth="488.0">
+                  <LineChart id="stateLineChart" fx:id="stateLineChart" layoutX="15.0" layoutY="62.0" prefHeight="285.0" prefWidth="488.0">
                     <xAxis>
-                      <CategoryAxis side="BOTTOM" />
+                      <CategoryAxis fx:id="stateLineChartXAxis" side="BOTTOM" />
                     </xAxis>
                     <yAxis>
-                      <NumberAxis side="LEFT" />
+                      <NumberAxis fx:id="stateLineChartYAxis" side="LEFT" />
                     </yAxis>
                   </LineChart>
-                  <PieChart id="statePieChart" layoutX="148.0" layoutY="66.0" prefHeight="278.0" prefWidth="306.0" />
+                  <PieChart id="statePieChart" fx:id="statePieChart" layoutX="148.0" layoutY="66.0" prefHeight="278.0" prefWidth="306.0" />
                   <RadioButton id="stateBarButton" fx:id="stateBarButton" layoutX="512.0" layoutY="120.0" mnemonicParsing="false" onAction="#actionEventHandler" text="Bar" />
                   <RadioButton id="stateLineButton" fx:id="stateLineButton" layoutX="512.0" layoutY="147.0" mnemonicParsing="false" onAction="#actionEventHandler" text="Line" />
                   <RadioButton id="statePieButton" fx:id="statePieButton" layoutX="512.0" layoutY="174.0" mnemonicParsing="false" onAction="#actionEventHandler" text="Pie" />
+                  <Text fx:id="stateYearBox" layoutX="235.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Year">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
                </children></AnchorPane>
       </content>
     </Tab>
@@ -75,31 +83,35 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
                   <Slider id="countyYearSlider" fx:id="countyYearSlider" layoutX="386.0" layoutY="21.0" onDragDetected="#changeEventHandler" prefHeight="18.0" prefWidth="94.0" />
-                  <TextField id="countyYearBox" fx:id="countyYearBox" layoutX="327.0" layoutY="14.0" onAction="#actionEventHandler" prefHeight="20.0" prefWidth="53.0" promptText="Year" />
-                  <StackedBarChart id="countyBarChart" layoutX="15.0" layoutY="62.0" prefHeight="285.0" prefWidth="488.0">
+                  <StackedBarChart id="countyBarChart" fx:id="countyBarChart" layoutX="15.0" layoutY="62.0" prefHeight="285.0" prefWidth="488.0">
                     <xAxis>
-                      <CategoryAxis side="BOTTOM" />
+                      <CategoryAxis fx:id="countyBarChartXAxis" side="BOTTOM" />
                     </xAxis>
                     <yAxis>
-                      <NumberAxis side="LEFT" />
+                      <NumberAxis fx:id="countyBarChartYAxis" side="LEFT" />
                     </yAxis>
                   </StackedBarChart>
                   <Label id="countyError" layoutX="480.0" layoutY="19.0" prefHeight="23.0" prefWidth="110.0" textFill="RED" />
                   <ComboBox id="countyChoice" fx:id="countyChoice" layoutX="119.0" layoutY="14.0" onAction="#changeEventHandler" prefHeight="31.0" prefWidth="98.0" />
                   <ComboBox id="countyRep" fx:id="countyOffice" layoutX="223.0" layoutY="14.0" onAction="#changeEventHandler" prefHeight="31.0" prefWidth="98.0" />
                   <ComboBox id="countyState" fx:id="countyState" layoutX="15.0" layoutY="14.0" onAction="#changeEventHandler" prefHeight="31.0" prefWidth="98.0" />
-                  <LineChart id="countyLineChart" layoutX="15.0" layoutY="62.0" prefHeight="285.0" prefWidth="488.0">
+                  <LineChart id="countyLineChart" fx:id="countyLineChart" layoutX="15.0" layoutY="62.0" prefHeight="285.0" prefWidth="488.0">
                     <xAxis>
-                      <CategoryAxis side="BOTTOM" />
+                      <CategoryAxis fx:id="countyLineChartXAxis" side="BOTTOM" />
                     </xAxis>
                     <yAxis>
-                      <NumberAxis side="LEFT" />
+                      <NumberAxis fx:id="countyLineChartYAxis" side="LEFT" />
                     </yAxis>
                   </LineChart>
-                  <PieChart id="countyPieChart" layoutX="148.0" layoutY="66.0" prefHeight="278.0" prefWidth="306.0" />
+                  <PieChart id="countyPieChart" fx:id="countyPieChart" layoutX="148.0" layoutY="66.0" prefHeight="278.0" prefWidth="306.0" />
                   <RadioButton id="countyBarButton" fx:id="countyBarButton" layoutX="512.0" layoutY="120.0" mnemonicParsing="false" onAction="#actionEventHandler" text="Bar" />
                   <RadioButton id="countyLineButton" fx:id="countyLineButton" layoutX="512.0" layoutY="147.0" mnemonicParsing="false" onAction="#actionEventHandler" text="Line" />
                   <RadioButton id="countyPieButton" fx:id="countyPieButton" layoutX="512.0" layoutY="174.0" mnemonicParsing="false" onAction="#actionEventHandler" text="Pie" />
+                  <Text fx:id="countyYearBox" layoutX="339.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Year">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
                </children>
             </AnchorPane>
         </content>
