electoral college gui

--- a/VotesResults/src/votesResults.fxml
+++ b/VotesResults/src/votesResults.fxml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.chart.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="VotesResultsController">
+
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="650.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="VotesResultsController">
   <tabs>
     <Tab id="federal" fx:id="federal" onClosed="#updateGUI" text="Federal">
       <content>
@@ -30,12 +33,21 @@
                       <NumberAxis fx:id="federalLineChartYAxis" side="LEFT" />
                     </yAxis>
                   </LineChart>
-                  <RadioButton id="federalBarButton" fx:id="federalBarButton" layoutX="510.0" layoutY="218.0" mnemonicParsing="false" onAction="#actionEventHandler" text="Bar" />
-                  <RadioButton id="federalPieButton" fx:id="federalPieButton" layoutX="511.0" layoutY="247.0" mnemonicParsing="false" onAction="#actionEventHandler" text="Pie" />
+                  <RadioButton id="federalBarButton" fx:id="federalBarButton" layoutX="516.0" layoutY="216.0" mnemonicParsing="false" onAction="#actionEventHandler" text="Bar Graph" />
+                  <RadioButton id="federalPieButton" fx:id="federalPieButton" layoutX="516.0" layoutY="239.0" mnemonicParsing="false" onAction="#actionEventHandler" text="Pie Chart" />
                   <Text fx:id="federalYearBox" layoutX="233.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Year" textAlignment="CENTER" wrappingWidth="52.21875">
                      <font>
                         <Font size="14.0" />
                      </font></Text>
+                  <RadioButton layoutX="516.0" layoutY="262.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="134.0" text="Electoral College" />
+                  <StackedBarChart layoutX="15.0" layoutY="62.0" prefHeight="370.0" prefWidth="490.0">
+                    <xAxis>
+                      <CategoryAxis side="BOTTOM" />
+                    </xAxis>
+                    <yAxis>
+                      <NumberAxis side="LEFT" />
+                    </yAxis>
+                  </StackedBarChart>
                </children></AnchorPane>
       </content>
     </Tab>
@@ -64,8 +76,8 @@
                     </yAxis>
                   </LineChart>
                   <PieChart id="statePieChart" fx:id="statePieChart" layoutX="59.0" layoutY="74.0" prefHeight="340.0" prefWidth="440.0" />
-                  <RadioButton id="stateBarButton" fx:id="stateBarButton" layoutX="516.0" layoutY="216.0" mnemonicParsing="false" onAction="#actionEventHandler" text="Bar" />
-                  <RadioButton id="statePieButton" fx:id="statePieButton" layoutX="517.0" layoutY="247.0" mnemonicParsing="false" onAction="#actionEventHandler" text="Pie" />
+                  <RadioButton id="stateBarButton" fx:id="stateBarButton" layoutX="516.0" layoutY="216.0" mnemonicParsing="false" onAction="#actionEventHandler" text="Bar Graph" />
+                  <RadioButton id="statePieButton" fx:id="statePieButton" layoutX="517.0" layoutY="247.0" mnemonicParsing="false" onAction="#actionEventHandler" text="Pie Chart" />
                   <Text fx:id="stateYearBox" layoutX="301.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Year">
                      <font>
                         <Font size="14.0" />
@@ -78,7 +90,7 @@
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <Slider id="countyYearSlider" fx:id="countyYearSlider" layoutX="465.0" layoutY="22.0" onDragDetected="#changeEventHandler" prefHeight="18.0" prefWidth="94.0" />
+                  <Slider id="countyYearSlider" fx:id="countyYearSlider" layoutX="465.0" layoutY="22.0" prefHeight="18.0" prefWidth="94.0" />
                   <StackedBarChart id="countyBarChart" fx:id="countyBarChart" layoutX="15.0" layoutY="62.0" prefHeight="370.0" prefWidth="490.0">
                     <xAxis>
                       <CategoryAxis fx:id="countyBarChartXAxis" side="BOTTOM" />
@@ -87,7 +99,6 @@
                       <NumberAxis fx:id="countyBarChartYAxis" side="LEFT" />
                     </yAxis>
                   </StackedBarChart>
-                  <Label id="countyError" layoutX="480.0" layoutY="19.0" prefHeight="23.0" prefWidth="110.0" textFill="RED" />
                   <ComboBox id="countyChoice" fx:id="countyChoice" layoutX="119.0" layoutY="14.0" onAction="#changeEventHandler" prefHeight="31.0" prefWidth="133.0" promptText="County" />
                   <ComboBox id="countyRep" fx:id="countyOffice" layoutX="259.0" layoutY="14.0" onAction="#changeEventHandler" prefHeight="31.0" prefWidth="155.0" promptText="Office" />
                   <ComboBox id="countyState" fx:id="countyState" layoutX="15.0" layoutY="14.0" onAction="#changeEventHandler" prefHeight="31.0" prefWidth="98.0" promptText="State" />
@@ -100,8 +111,8 @@
                     </yAxis>
                   </LineChart>
                   <PieChart id="countyPieChart" fx:id="countyPieChart" layoutX="64.0" layoutY="75.0" prefHeight="340.0" prefWidth="440.0" />
-                  <RadioButton id="countyBarButton" fx:id="countyBarButton" layoutX="509.0" layoutY="225.0" mnemonicParsing="false" onAction="#actionEventHandler" text="Bar" />
-                  <RadioButton id="countyPieButton" fx:id="countyPieButton" layoutX="510.0" layoutY="255.0" mnemonicParsing="false" onAction="#actionEventHandler" text="Pie" />
+                  <RadioButton id="countyBarButton" fx:id="countyBarButton" layoutX="509.0" layoutY="225.0" mnemonicParsing="false" onAction="#actionEventHandler" text="Bar Graph" />
+                  <RadioButton id="countyPieButton" fx:id="countyPieButton" layoutX="510.0" layoutY="255.0" mnemonicParsing="false" onAction="#actionEventHandler" text="Pie Chart" />
                   <Text fx:id="countyYearBox" layoutX="423.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Year">
                      <font>
                         <Font size="14.0" />
